Remove autoscaling in single step

--- a/stacks/container-apps/dovetail.prx.org.yml
+++ b/stacks/container-apps/dovetail.prx.org.yml
@@ -722,28 +722,28 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-  DovetailScalableTarget:
-    Type: AWS::ApplicationAutoScaling::ScalableTarget
-    Properties:
-      MinCapacity: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DovetailMinCount]
-      MaxCapacity: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DovetailMaxCount]
-      ResourceId: !Join ["/", ["service", !Ref ECSCluster, !GetAtt DovetailApplicationService.Name]]
-      RoleARN: !GetAtt DovetailAutoScalingIamRole.Arn
-      ScalableDimension: ecs:service:DesiredCount
-      ServiceNamespace: ecs
-  DovetailScalingPolicy:
-    Type: AWS::ApplicationAutoScaling::ScalingPolicy
-    Properties:
-      PolicyName: RequestCountScaling
-      PolicyType: TargetTrackingScaling
-      ScalingTargetId: !Ref DovetailScalableTarget
-      TargetTrackingScalingPolicyConfiguration:
-        PredefinedMetricSpecification:
-          PredefinedMetricType: ALBRequestCountPerTarget
-          ResourceLabel: !Join ["/", [!GetAtt DovetailALB.LoadBalancerFullName, !GetAtt DovetailApplicationALBTargetGroup.TargetGroupFullName]]
-        ScaleInCooldown: 300
-        ScaleOutCooldown: 60
-        TargetValue: 200
+  # DovetailScalableTarget:
+  #   Type: AWS::ApplicationAutoScaling::ScalableTarget
+  #   Properties:
+  #     MinCapacity: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DovetailMinCount]
+  #     MaxCapacity: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DovetailMaxCount]
+  #     ResourceId: !Join ["/", ["service", !Ref ECSCluster, !GetAtt DovetailApplicationService.Name]]
+  #     RoleARN: !GetAtt DovetailAutoScalingIamRole.Arn
+  #     ScalableDimension: ecs:service:DesiredCount
+  #     ServiceNamespace: ecs
+  # DovetailScalingPolicy:
+  #   Type: AWS::ApplicationAutoScaling::ScalingPolicy
+  #   Properties:
+  #     PolicyName: RequestCountScaling
+  #     PolicyType: TargetTrackingScaling
+  #     ScalingTargetId: !Ref DovetailScalableTarget
+  #     TargetTrackingScalingPolicyConfiguration:
+  #       PredefinedMetricSpecification:
+  #         PredefinedMetricType: ALBRequestCountPerTarget
+  #         ResourceLabel: !Join ["/", [!GetAtt DovetailALB.LoadBalancerFullName, !GetAtt DovetailApplicationALBTargetGroup.TargetGroupFullName]]
+  #       ScaleInCooldown: 300
+  #       ScaleOutCooldown: 60
+  #       TargetValue: 200
   # Dovetail Elixir Autoscaling
   DovetailRouterScalableTarget:
     Type: AWS::ApplicationAutoScaling::ScalableTarget
