--- a/storage/multi-region-replication/radiotopia-media.yml
+++ b/storage/multi-region-replication/radiotopia-media.yml
@@ -19,6 +19,7 @@ Parameters:
     Type: String
   CloudFrontOai:
     Type: String
+    AllowedPattern: ^$|^arn:aws:iam::cloudfront:user\/CloudFront Origin Access Identity [A-Z0-9]+$
 
 Conditions:
   HasDestinationBucketArn: !Not [!Equals [!Ref DestinationBucketArn, ""]]
