Set up cors on ad-upload buckets

--- a/storage/multi-region-replication/ad-files.yml
+++ b/storage/multi-region-replication/ad-files.yml
@@ -110,6 +110,18 @@ Resources:
         - !Ref AWS::NoValue
       VersioningConfiguration:
         Status: Enabled # Required for replication
+      CorsConfiguration:
+        CorsRules:
+          - AllowedHeaders:
+            - '*'
+            AllowedMethods:
+              - GET
+              - HEAD
+              - POST
+            AllowedOrigins:
+              - '*'
+            ExposedHeaders:
+              - Date
   AdFilesBucketPolicy:
     Type: AWS::S3::BucketPolicy
     Condition: HasCloudFrontOai
