--- a/storage/multi-region-replication/networks.yml
+++ b/storage/multi-region-replication/networks.yml
@@ -1,4 +1,4 @@
-# storage/multi-region-replication/radiotopia-media.yml
+# storage/multi-region-replication/networks.yml
 
 ################################################################################
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
@@ -8,22 +8,32 @@
 
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
-  Creates an S3 bucket to be used as an origin for the media.radiotopia.fm
-  CloudFront distribution. Contents will be replicated to a second region.
-  Buckets in both regions are created using this template. Once both buckets
-  have been created, the destination bucket parameter should be set on the
-  stack that is serving as the source region.
+  Creates an S3 bucket to be used for Networks. Contents will be replicated to
+  a second region. Buckets in both regions are created using this template.
+  Once both buckets have been created, the destination bucket parameter should
+  be set on the stack that is serving as the source region.
 
 Parameters:
+  BucketNameOverride:
+    Type: String
   DestinationBucketArn:
     Type: String
-  CloudFrontOai:
+  EnvironmentType:
     Type: String
-    AllowedPattern: ^$|^arn:aws:iam::cloudfront:user\/CloudFront Origin Access Identity [A-Z0-9]+$
+    AllowedValues:
+      - Staging
+      - Production
 
 Conditions:
   HasDestinationBucketArn: !Not [!Equals [!Ref DestinationBucketArn, ""]]
-  HasCloudFrontOai: !Not [!Equals [!Ref CloudFrontOai, ""]]
+  HasBucketNameOverride: !Not [!Equals [!Ref BucketNameOverride, ""]]
+
+Mappings:
+  EnvironmentTypeMap:
+    Staging:
+      abbreviation: stag
+    Production:
+      abbreviation: prod
 
 Resources:
   ReplicationRole:
@@ -41,8 +51,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:ops:environment, Value: Production }
-        - { Key: prx:dev:application, Value: radiotopia.fm }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Networks }
   ReplicationSourcePolicy:
     Type: AWS::IAM::Policy
     Condition: HasDestinationBucketArn
@@ -53,13 +63,13 @@ Resources:
               - s3:GetReplicationConfiguration
               - s3:ListBucket
             Effect: Allow
-            Resource: !GetAtt RadiotopiaMediaBucket.Arn
+            Resource: !GetAtt NetworksBucket.Arn
           - Action:
               - s3:GetObjectVersionForReplication
               - s3:GetObjectVersionAcl
               - s3:GetObjectVersionTagging
             Effect: Allow
-            Resource: !Sub ${RadiotopiaMediaBucket.Arn}/*
+            Resource: !Sub ${NetworksBucket.Arn}/*
         Version: "2012-10-17"
       PolicyName: ReplicationSourcePolicy
       Roles:
@@ -81,17 +91,40 @@ Resources:
       Roles:
         - !Ref ReplicationRole
 
-  RadiotopiaMediaBucket:
+  NetworksBucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
     Properties:
-      BucketName: !Sub prx-mrr-${AWS::Region}-radiotopia-media
+      BucketName: !If
+        - HasBucketNameOverride
+        - !Ref BucketNameOverride
+        - Fn::Sub:
+            - prx-mrr-${AWS::Region}-networks-${env}
+            - env: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+      CorsConfiguration:
+        CorsRules:
+          - AllowedHeaders: ["*"]
+            AllowedMethods: [PUT, POST, DELETE, GET, HEAD]
+            AllowedOrigins: ["*"]
+            ExposedHeaders:
+              - ETag
+              - Content-Type
+              - Content-Length
+              - Date
+            MaxAge: 3000
+      LifecycleConfiguration:
+        Rules:
+          - Id: Move to IA
+            Status: Enabled
+            Transitions:
+              - StorageClass: STANDARD_IA
+                TransitionInDays: 30
       PublicAccessBlockConfiguration:
-        BlockPublicAcls: true
-        BlockPublicPolicy: true
-        IgnorePublicAcls: true
-        RestrictPublicBuckets: true
+        BlockPublicAcls: false
+        BlockPublicPolicy: false
+        IgnorePublicAcls: false
+        RestrictPublicBuckets: false
       ReplicationConfiguration: !If
         - HasDestinationBucketArn
         - Role: !GetAtt ReplicationRole.Arn
@@ -104,21 +137,7 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:ops:environment, Value: Production }
-        - { Key: prx:dev:application, Value: radiotopia.fm }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Networks }
       VersioningConfiguration:
         Status: Enabled # Required for replication
-  RadiotopiaMediaBucketPolicy:
-    Type: AWS::S3::BucketPolicy
-    Condition: HasCloudFrontOai
-    Properties:
-      Bucket: !Ref RadiotopiaMediaBucket
-      PolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Action: s3:GetObject
-            Effect: Allow
-            Principal:
-              AWS: !Ref CloudFrontOai
-            Resource: !Sub ${RadiotopiaMediaBucket.Arn}/*
-            Sid: Grant read access to a CloudFront Origin Identity
