Fixup mapping value

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -403,7 +403,8 @@ Resources:
               Value: !GetAtt UploadHttpSigningAccessKey.SecretAccessKey
             - Name: UPLOAD_ADFILE_ACCESS_KEY_ID
               Value: !GetAtt UploadHttpSigningAccessKey
-            - Name: UPLOAD_ADFILE_AWS_REGION: "us-east-1"
+            - Name: UPLOAD_ADFILE_AWS_REGION
+              Value: "us-east-1"
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
