--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -402,7 +402,7 @@ Resources:
             - Name: UPLOAD_ADFILE_SECRET_ACCESS_KEY
               Value: !GetAtt UploadHttpSigningAccessKey.SecretAccessKey
             - Name: UPLOAD_ADFILE_ACCESS_KEY_ID
-              Value: !GetAtt UploadHttpSigningAccessKey
+              Value: UploadHttpSigningAccessKey
             - Name: UPLOAD_ADFILE_AWS_REGION
               Value: "us-east-1"
           Essential: true
