Rename to S3Signinguser

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -300,7 +300,7 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Augury }
       TaskRoleArn: !GetAtt TaskRole.Arn
-  UploadHttpSigningUser:
+  S3SigningUser:
     Type: AWS::IAM::User
     Properties:
       Tags:
@@ -314,7 +314,7 @@ Resources:
   UploadHttpSigningAccessKey:
     Type: AWS::IAM::AccessKey
     Properties:
-      UserName: !Ref UploadHttpSigningUser
+      UserName: !Ref S3SigningUser
   UploadHttpSigningS3AccessPolicy:
     Type: AWS::IAM::Policy
     Properties:
@@ -330,7 +330,7 @@ Resources:
               - arn:aws:s3:::prx-mrr-us-east-1-ad-files/upload/*
       PolicyName: ExternalS3BucketAccess
       Users:
-        - !Ref UploadHttpSigningUser
+        - !Ref S3SigningUser
   WorkerTaskLogImpressionsFetchJobMetricFilter:
     Type: AWS::Logs::MetricFilter
     Properties:
