--- a/stacks/container-apps/augury.prx.org.yml
+++ b/stacks/container-apps/augury.prx.org.yml
@@ -88,7 +88,7 @@ Parameters:
     Type: String
     Default: /api/v1
 Resources:
-  UploadHttpSigningUser:
+  S3SigningUser:
     Type: AWS::IAM::User
     Properties:
       Tags:
@@ -100,7 +100,7 @@ Resources:
   UploadHttpSigningAccessKey:
     Type: AWS::IAM::AccessKey
     Properties:
-      UserName: !Ref UploadHttpSigningUser
+      UserName: !Ref S3SigningUser
   UploadHttpSigningS3AccessPolicy:
     Type: AWS::IAM::Policy
     Properties:
@@ -116,7 +116,7 @@ Resources:
               - arn:aws:s3:::prx-mrr-us-east-1-ad-files/upload/*
       PolicyName: ExternalS3BucketAccess
       Users:
-        - !Ref UploadHttpSigningUser
+        - !Ref S3SigningUser
   ALBTargetGroup:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     Properties:
