Tag with just Augury app name

--- a/stacks/container-apps/augury.prx.org.yml
+++ b/stacks/container-apps/augury.prx.org.yml
@@ -96,7 +96,7 @@ Resources:
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:application, Value: Augury S3 Uploads }
+        - { Key: prx:dev:application, Value: Augury }
   UploadHttpSigningAccessKey:
     Type: AWS::IAM::AccessKey
     Properties:
