--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -310,7 +310,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:application, Value: Augury S3 Uploads }
+        - { Key: prx:dev:application, Value: Augury }
   UploadHttpSigningAccessKey:
     Type: AWS::IAM::AccessKey
     Properties:
