Add TODO for multi-region

--- a/stacks/container-apps/augury.prx.org.yml
+++ b/stacks/container-apps/augury.prx.org.yml
@@ -113,6 +113,7 @@ Resources:
               - s3:ListMultipartUploadParts
               - s3:PutObject
             Resource:
+              # TODO, handle this better for multi-region
               - arn:aws:s3:::prx-mrr-us-east-1-ad-files/upload/*
       PolicyName: ExternalS3BucketAccess
       Users:
