Use !Ref for value from reference

--- a/stacks/container-apps/augury.prx.org.yml
+++ b/stacks/container-apps/augury.prx.org.yml
@@ -235,7 +235,7 @@ Resources:
             - Name: UPLOAD_ADFILE_SECRET_ACCESS_KEY
               Value: !GetAtt UploadHttpSigningAccessKey.SecretAccessKey
             - Name: UPLOAD_ADFILE_ACCESS_KEY_ID
-              Value: UploadHttpSigningAccessKey
+              Value: !Ref UploadHttpSigningAccessKey
             - Name: UPLOAD_ADFILE_AWS_REGION
               Value: "us-east-1"
           Essential: true
