--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -388,6 +388,7 @@ Parameters:
       - TLSv1.1_2016
       - TLSv1.2_2018
       - TLSv1.2_2019
+      - TLSv1.2_2021
   CloudFrontCustom403ErrorResponseCode:
     Type: String
     Description: >-
