Rename UploadHttpSigningAccessKey -> S3SigningAccessKey

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -311,7 +311,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Augury }
-  UploadHttpSigningAccessKey:
+  S3SigningAccessKey:
     Type: AWS::IAM::AccessKey
     Properties:
       UserName: !Ref S3SigningUser
@@ -401,9 +401,9 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
             - Name: UPLOAD_ADFILE_SECRET_ACCESS_KEY
-              Value: !GetAtt UploadHttpSigningAccessKey.SecretAccessKey
+              Value: !GetAtt S3SigningAccessKey.SecretAccessKey
             - Name: UPLOAD_ADFILE_ACCESS_KEY_ID
-              Value: !Ref UploadHttpSigningAccessKey
+              Value: !Ref S3SigningAccessKey
             - Name: UPLOAD_ADFILE_AWS_REGION
               Value: "us-east-1"
           Essential: true
