--- a/stacks/container-apps/augury.prx.org.yml
+++ b/stacks/container-apps/augury.prx.org.yml
@@ -97,7 +97,7 @@ Resources:
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Augury }
-  UploadHttpSigningAccessKey:
+  S3SigningAccessKey:
     Type: AWS::IAM::AccessKey
     Properties:
       UserName: !Ref S3SigningUser
@@ -233,9 +233,9 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
             - Name: UPLOAD_ADFILE_SECRET_ACCESS_KEY
-              Value: !GetAtt UploadHttpSigningAccessKey.SecretAccessKey
+              Value: !GetAtt S3SigningAccessKey.SecretAccessKey
             - Name: UPLOAD_ADFILE_ACCESS_KEY_ID
-              Value: !Ref UploadHttpSigningAccessKey
+              Value: !Ref S3SigningAccessKey
             - Name: UPLOAD_ADFILE_AWS_REGION
               Value: "us-east-1"
           Essential: true
