Un-revert Send dovetail logged impressions to kinesis streams b7966bb

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -621,6 +621,7 @@ Resources:
         VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn # TODO Give it a separate cert
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+        MetricsKinesisStream:: !Join ["", ["/prx/", !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation], "/analytics-ingest-lambda/METRICS_KINESIS_STREAM"]]
         DynamodbKinesisStream: !Join ["", ["/prx/", !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation], "/analytics-ingest-lambda/DYNAMODB_KINESIS_STREAM"]]
         OpsWarnMessagesSnsTopicArn:
           Fn::ImportValue: !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
