Rename access policies

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -300,6 +300,7 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Augury }
       TaskRoleArn: !GetAtt TaskRole.Arn
+
   S3SigningUser:
     Type: AWS::IAM::User
     Properties:
@@ -315,7 +316,7 @@ Resources:
     Type: AWS::IAM::AccessKey
     Properties:
       UserName: !Ref S3SigningUser
-  UploadHttpSigningS3AccessPolicy:
+  S3SigningAccessPolicy:
     Type: AWS::IAM::Policy
     Properties:
       PolicyDocument:
@@ -332,6 +333,7 @@ Resources:
       PolicyName: ExternalS3BucketAccess
       Users:
         - !Ref S3SigningUser
+
   WorkerTaskLogImpressionsFetchJobMetricFilter:
     Type: AWS::Logs::MetricFilter
     Properties:
