--- a/stacks/container-apps/augury.prx.org.yml
+++ b/stacks/container-apps/augury.prx.org.yml
@@ -101,7 +101,7 @@ Resources:
     Type: AWS::IAM::AccessKey
     Properties:
       UserName: !Ref S3SigningUser
-  UploadHttpSigningS3AccessPolicy:
+  S3SigningAccessPolicy:
     Type: AWS::IAM::Policy
     Properties:
       PolicyDocument:
