--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -61,6 +61,7 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       Policies:
+        # TODO: no longer needed after CW log subscription
         - PolicyName: KinesisWritePolicy
           PolicyDocument:
             Version: "2012-10-17"
@@ -144,6 +145,7 @@ Resources:
           DDB_TABLE: !Ref DynamodbTableName
           DDB_ROLE: !Ref DynamodbAccessRole
           DDB_TTL: !Ref DynamodbTTL
+          # TODO: no longer needed after CW log subscription
           KINESIS_STREAM: !Ref MetricsKinesisStream
           KINESIS_RETRY_STREAM: !Ref DynamodbKinesisStream
       Handler: index.handler
