--- a/stacks/serverless/analytics-ingest-filters.yml
+++ b/stacks/serverless/analytics-ingest-filters.yml
@@ -22,7 +22,7 @@ Parameters:
     Type: String
   RedisFunctionName:
     Type: String
-  MetricsKinesisStream:
+  MetricsKinesisStreamArn:
     Type: AWS::SSM::Parameter::Value<String>
 Resources:
   # bigquery metrics
@@ -230,7 +230,7 @@ Resources:
                   - "kinesis:PutRecord"
                   - "kinesis:PutRecords"
                 Resource:
-                  - !Ref MetricsKinesisStream
+                  - !Ref MetricsKinesisStreamArn
       Tags:
         - Key: Project
           Value: Dovetail
@@ -241,7 +241,7 @@ Resources:
   AnalyticsDynamodbSubscriptionFilter:
     Type: "AWS::Logs::SubscriptionFilter"
     Properties:
-      DestinationArn: !Ref MetricsKinesisStream
+      DestinationArn: !Ref MetricsKinesisStreamArn
       FilterPattern: "{$.msg = impression}"
       LogGroupName: !Ref AnalyticsDynamodbLogGroup
       RoleArn: !GetAtt AnalyticsDynamodbSubscriptionRole.Arn
