--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -248,7 +248,7 @@ Resources:
         DynamodbFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.DynamodbFunctionName
         PingbacksFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.PingbacksFunctionName
         RedisFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.RedisFunctionName
-        MetricsKinesisStream: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/METRICS_KINESIS_STREAM"
+        MetricsKinesisStreamArn: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/METRICS_KINESIS_STREAM"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
