Need a few more uploader related static vars

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -408,6 +408,12 @@ Resources:
               Value: !Ref S3SigningAccessKey
             - Name: UPLOAD_ADFILE_AWS_REGION
               Value: "us-east-1"
+            - Name: UPLOAD_ADFILE_BUCKET
+              Value: "prx-mrr-us-east-1-ad-files"
+            - Name: UPLOAD_ADFILE_BUCKET_DOMAIN
+              Value: "prx-mrr-us-east-1-ad-files.s3.us-east-1.amazonaws.com"
+            - Name: UPLOAD_ADFILE_PUBLIC_ACCESS_HOST
+              Value: "a.prxu.org"
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
