Consolidate the metrics per https://github.com/PRX/augury.prx.org/pull/579

--- a/stacks/container-apps/augury-alarms.yml
+++ b/stacks/container-apps/augury-alarms.yml
@@ -78,30 +78,12 @@ Resources:
         - MetricName: !Sub "ForecastDownloadsElapsed${EnvironmentType}"
           MetricNamespace: PRX/Augury
           MetricValue: $.elapsed
-  ForecastGeocountriesMetricFilter:
+  ForecastPartitionsMetricFilter:
     Type: "AWS::Logs::MetricFilter"
     Properties:
-      FilterPattern: '{ $.msg = "forecast_geocountries" }'
+      FilterPattern: '{ $.msg = "forecast_partitions" }'
       LogGroupName: !Ref AuguryForecastLogGroupName
       MetricTransformations:
-        - MetricName: !Sub "ForecastGeocountriesElapsed${EnvironmentType}"
-          MetricNamespace: PRX/Augury
-          MetricValue: $.elapsed
-  ForecastGeosubdivsMetricFilter:
-    Type: "AWS::Logs::MetricFilter"
-    Properties:
-      FilterPattern: '{ $.msg = "forecast_geosubdivs" }'
-      LogGroupName: !Ref AuguryForecastLogGroupName
-      MetricTransformations:
-        - MetricName: !Sub "ForecastGeosubdivsElapsed${EnvironmentType}"
-          MetricNamespace: PRX/Augury
-          MetricValue: $.elapsed
-  ForecastGeometrosMetricFilter:
-    Type: "AWS::Logs::MetricFilter"
-    Properties:
-      FilterPattern: '{ $.msg = "forecast_geometros" }'
-      LogGroupName: !Ref AuguryForecastLogGroupName
-      MetricTransformations:
-        - MetricName: !Sub "ForecastGeometrosElapsed${EnvironmentType}"
+        - MetricName: !Sub "ForecastPartitionsElapsed${EnvironmentType}"
           MetricNamespace: PRX/Augury
           MetricValue: $.elapsed
