--- a/stacks/container-apps/augury-alarms.yml
+++ b/stacks/container-apps/augury-alarms.yml
@@ -17,14 +17,14 @@ Resources:
       FilterPattern: '{ $.msg = "*Performed ImpressionsFetchJob*" }'
       LogGroupName: !Ref AuguryWorkerLogGroupName
       MetricTransformations:
-        - MetricName: !Sub "ActualsIngestJobInvocationCount${EnvironmentType}"
+        - MetricName: !Sub "ActualsIngestJobInvocationCountOldCluster${EnvironmentType}"
           MetricNamespace: PRX/Augury
           MetricValue: "1"
   AuguryActualsAreBehindAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[Augury][Worker][ActiveJob] ${EnvironmentType} Augury actuals are behind"
+      AlarmName: !Sub "[Augury][Worker][ActiveJob] ${EnvironmentType} Augury actuals are behind (OldCluster)"
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
@@ -34,7 +34,7 @@ Resources:
       AlarmDescription: Augury actuals are behind
       ComparisonOperator: LessThanThreshold
       EvaluationPeriods: 3
-      MetricName: !Sub "ActualsIngestJobInvocationCount${EnvironmentType}"
+      MetricName: !Sub "ActualsIngestJobInvocationCountOldCluster${EnvironmentType}"
       Namespace: PRX/Augury
       Period: 300
       Statistic: Sum
