--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -50,6 +50,8 @@ Parameters:
     Type: String
   SecretsInstanceAccessPolicyArn:
     Type: String
+  DovetailRedisHostname:
+    Type: String
 Mappings:
   EnvironmentTypeMap:
     Testing:
@@ -467,6 +469,20 @@ Resources:
                   JSON="[{\"InstanceId\": \"${AWSINSTANCEID}\",\"CpuCredits\": \"unlimited\"}]"
                   aws --region=$AWSREGION ec2 modify-instance-credit-specification --instance-credit-specification "${JSON}"
                 fi
+            05_check_redis_connectivity:
+              # Resolve the Dovetail Redis host and check all IPs returned for
+              # connectivity. If any can't connect, the instance is marked as
+              # unhealthy
+              command: !Sub |-
+                #!/bin/bash
+                for IP in $(getent hosts ${DovetailRedisHostname} | awk '{ print $1 }')
+                do
+                  if ! timeout 0.1 bash -c "cat < /dev/null > /dev/tcp/$IP/6379"; then
+                    echo "Unhealthy; Failed to connect to Redis: $IP"
+                    INSTANCE_ID=`ec2-metadata -i`
+                    aws autoscaling set-instance-health --instance-id $INSTANCE_ID --health-status Unhealthy
+                  fi
+                done
           services:
             sysvinit:
               cfn-hup:
