--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -41,6 +41,7 @@ Parameters:
     AllowedValues:
       - Primary
       - Secondary
+  DovetailRedisHostname: { Type: String }
   # Application Specific
   AuguryEcrImageTag: { Type: String }
   AugurySecretsVersion: { Type: String }
@@ -423,6 +424,7 @@ Resources:
           Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceDecryptPolicyArn
         SecretsInstanceAccessPolicyArn:
           Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceAccessPolicyArn
+        DovetailRedisHostname: !Ref DovetailRedisHostname
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -867,6 +869,7 @@ Resources:
         LoadBalancerSecurityGroupId: !GetAtt SharedAlbStack.Outputs.LoadBalancerSecurityGroupId
         EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
         KmsEndpointAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.KmsEndpointAccessSecurityGroupId
+        DovetailRedisHostname: !Ref DovetailRedisHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
