Add SetInstanceHealth policy to ASG roles

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -276,6 +276,18 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
+  ECSInstanceIAMRoleSetHealthPolicy:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: AutoscalingSetInstanceHealth
+      PolicyDocument:
+        Statement:
+          - Action: autoscaling:SetInstanceHealth
+            Effect: Allow
+            Resource: !Sub arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/${ECSClusterASG}
+        Version: "2012-10-17"
+      Roles:
+        - !Ref ECSInstanceIAMRole
   ECSInstanceProfile:
     Type: "AWS::IAM::InstanceProfile"
     Properties:
