--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -61,6 +61,18 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
+  InstanceRoleSetHealthPolicy:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: AutoscalingSetInstanceHealth
+      PolicyDocument:
+        Statement:
+          - Action: autoscaling:SetInstanceHealth
+            Effect: Allow
+            Resource: !Sub arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/${Asg}
+        Version: "2012-10-17"
+      Roles:
+        - !Ref InstanceRole
 
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
