--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -24,6 +24,9 @@ Parameters:
     Type: String
   AmazonSesSmtpCredentialsGeneratorServiceToken:
     Type: String
+  SharedAuroraPostgresqlEndpoint:
+    Type: String
+    Default: ""
   # Secrets ####################################################################
   SecretsInstanceDecryptPolicyArn:
     Type: String
@@ -288,6 +291,7 @@ Resources:
         DesiredWebsProduction: "2"
         DesiredWorkers: "2"
         DesiredWorkersProduction: "2"
+        SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
@@ -332,6 +336,7 @@ Resources:
         VPCSubnet1: !Ref VPCSubnet1
         VPCSubnet2: !Ref VPCSubnet2
         VPCSubnet3: !Ref VPCSubnet3
+        SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
       Tags:
