Add Augury PG port to task defs

--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -112,6 +112,11 @@ Resources:
                 - Name: POSTGRES_HOST
                   Value: !Ref SharedRdsPostgresqlEndpoint
                 - !Ref AWS::NoValue
+            - Fn::If:
+                - IsStaging
+                - Name: POSTGRES_PORT
+                  Value: "5432" # TODO Make this a root stack parameter
+                - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
