--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -231,6 +231,11 @@ Resources:
                 - Name: POSTGRES_HOST
                   Value: !Ref SharedAuroraPostgresqlEndpoint
                 - !Ref AWS::NoValue
+            - Fn::If:
+                - IsStaging
+                - Name: POSTGRES_PORT
+                  Value: "3306" # TODO Make this a root stack parameter
+                - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -284,6 +289,11 @@ Resources:
                 - IsStaging
                 - Name: POSTGRES_HOST
                   Value: !Ref SharedAuroraPostgresqlEndpoint
+                - !Ref AWS::NoValue
+            - Fn::If:
+                - IsStaging
+                - Name: POSTGRES_PORT
+                  Value: "3306" # TODO Make this a root stack parameter
                 - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
@@ -429,6 +439,11 @@ Resources:
                 - IsStaging
                 - Name: POSTGRES_HOST
                   Value: !Ref SharedAuroraPostgresqlEndpoint
+                - !Ref AWS::NoValue
+            - Fn::If:
+                - IsStaging
+                - Name: POSTGRES_PORT
+                  Value: "3306" # TODO Make this a root stack parameter
                 - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
