--- a/stacks/container-apps/augury.prx.org.yml
+++ b/stacks/container-apps/augury.prx.org.yml
@@ -252,6 +252,11 @@ Resources:
                 - Name: POSTGRES_HOST
                   Value: !Ref SharedRdsPostgresqlEndpoint
                 - !Ref AWS::NoValue
+            - Fn::If:
+                - IsStaging
+                - Name: POSTGRES_PORT
+                  Value: "5432" # TODO Make this a root stack parameter
+                - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -343,6 +348,11 @@ Resources:
                 - IsStaging
                 - Name: POSTGRES_HOST
                   Value: !Ref SharedRdsPostgresqlEndpoint
+                - !Ref AWS::NoValue
+            - Fn::If:
+                - IsStaging
+                - Name: POSTGRES_PORT
+                  Value: "5432" # TODO Make this a root stack parameter
                 - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
