Ignore EC2 instance grace period

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -274,9 +274,8 @@ Resources:
                 do
                   if ! timeout 0.1 bash -c "cat < /dev/null > /dev/tcp/$IP/6379"; then
                     echo "Unhealthy; Failed to connect to Redis: $IP"
-                    sudo yum install aws-cli -y
                     INSTANCE_ID=`ec2-metadata -i | cut -d " " -f 2`
-                    aws autoscaling set-instance-health --instance-id $INSTANCE_ID --health-status Unhealthy
+                    aws autoscaling set-instance-health --instance-id $INSTANCE_ID --health-status Unhealthy --region ${AWS::Region} --no-should-respect-grace-period
                   fi
                 done
           services:
