Ensure AWS CLI is installed before cfn-init runs

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -207,7 +207,7 @@ Resources:
               Content-Type: text/x-shellscript; charset="us-ascii"
 
               #!/bin/bash
-              yum install -y aws-cfn-bootstrap
+              yum install -y aws-cfn-bootstrap aws-cli
 
               # --resource is the logical ID of the resource in a CloudFormation stack (generally a stack launched from
               # this template) that includes AWS::CloudFormation::Init metadata. That resource is likely the same
