--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -61,6 +61,13 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       Policies:
+        - PolicyName: CloudWatchMetrisPutPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action: "cloudwatch:PutMetricData"
+                Resource: "*"
         - PolicyName: DynamodbAssumeRolePolicy
           PolicyDocument:
             Version: "2012-10-17"
