Also switch legacy augury to Aurora

--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -35,6 +35,8 @@ Parameters:
     Type: "AWS::EC2::Subnet::Id"
   SharedRdsPostgresqlEndpoint:
     Type: String
+  SharedAuroraPostgresqlEndpoint:
+    Type: String
   # Monitoring #################################################################
   OpsErrorMessagesSnsTopicArn:
     Type: String
@@ -110,12 +112,12 @@ Resources:
             - Fn::If:
                 - IsStaging
                 - Name: POSTGRES_HOST
-                  Value: !Ref SharedRdsPostgresqlEndpoint
+                  Value: !Ref SharedAuroraPostgresqlEndpoint
                 - !Ref AWS::NoValue
             - Fn::If:
                 - IsStaging
                 - Name: POSTGRES_PORT
-                  Value: "5432" # TODO Make this a root stack parameter
+                  Value: "3306" # TODO Make this a root stack parameter
                 - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
