--- a/stacks/container-apps/augury.prx.org.yml
+++ b/stacks/container-apps/augury.prx.org.yml
@@ -90,6 +90,8 @@ Parameters:
     Default: /api/v1
   SharedRdsPostgresqlEndpoint:
     Type: String
+  SharedAuroraPostgresqlEndpoint:
+    Type: String
 Resources:
   S3SigningUser:
     Type: AWS::IAM::User
@@ -250,12 +252,12 @@ Resources:
             - Fn::If:
                 - IsStaging
                 - Name: POSTGRES_HOST
-                  Value: !Ref SharedRdsPostgresqlEndpoint
+                  Value: !Ref SharedAuroraPostgresqlEndpoint
                 - !Ref AWS::NoValue
             - Fn::If:
                 - IsStaging
                 - Name: POSTGRES_PORT
-                  Value: "5432" # TODO Make this a root stack parameter
+                  Value: "3306" # TODO Make this a root stack parameter
                 - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
@@ -347,12 +349,12 @@ Resources:
             - Fn::If:
                 - IsStaging
                 - Name: POSTGRES_HOST
-                  Value: !Ref SharedRdsPostgresqlEndpoint
+                  Value: !Ref SharedAuroraPostgresqlEndpoint
                 - !Ref AWS::NoValue
             - Fn::If:
                 - IsStaging
                 - Name: POSTGRES_PORT
-                  Value: "5432" # TODO Make this a root stack parameter
+                  Value: "3306" # TODO Make this a root stack parameter
                 - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
