--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -313,6 +313,7 @@ Resources:
         UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
+        SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         SecretsBase:
           Fn::ImportValue: !Sub ${SecretsStackName}-SecretsBaseRegion
         SecretsInstanceDecryptPolicyArn:
