--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -26,6 +26,8 @@ Parameters:
     Type: String
   SharedRdsPostgresqlEndpoint:
     Type: String
+  SharedAuroraPostgresqlEndpoint:
+    Type: String
   # Secrets ####################################################################
   SecretsInstanceDecryptPolicyArn:
     Type: String
@@ -284,6 +286,7 @@ Resources:
         DesiredWorkers: "2"
         DesiredWorkersProduction: "2"
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
+        SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
@@ -329,6 +332,7 @@ Resources:
         VPCSubnet2: !Ref VPCSubnet2
         VPCSubnet3: !Ref VPCSubnet3
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
+        SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
       Tags:
