--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -168,3 +168,7 @@ Resources:
         # Articles of Interest
         - { Type: A, Name: !Sub "pf4507arti.${Domain}", AliasTarget: { DNSName: "d1zo9zhh10nmxe.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf4507arti.${Domain}", AliasTarget: { DNSName: "d1zo9zhh10nmxe.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Spooked
+        - { Type: A, Name: !Sub "pf9317spkd.${Domain}", AliasTarget: { DNSName: "d3r6tzejjb4wb.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf9317spkd.${Domain}", AliasTarget: { DNSName: "d3r6tzejjb4wb.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
