Switch to aurora

--- a/stacks/container-apps/feeder.prx.org.yml
+++ b/stacks/container-apps/feeder.prx.org.yml
@@ -7,6 +7,7 @@ Conditions:
   CreateWorkerResources: !Equals [!Ref CreateWorker, true]
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
   HasMemoryReservation: !Not [!Equals [!Ref ContainerMemoryReservation, ""]]
+  IsStaging: !Equals [!Ref EnvironmentType, Staging]
 
 Parameters:
   # VPC ########################################################################
@@ -78,6 +79,10 @@ Parameters:
   HealthCheckPath:
     Type: String
     Default: /api/v1
+  SharedRdsPostgresqlEndpoint:
+    Type: String
+  SharedAuroraPostgresqlEndpoint:
+    Type: String
 Resources:
   ALBSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -376,6 +381,16 @@ Resources:
               Value: !Ref AWS::Region
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
+            - Fn::If:
+                - IsStaging
+                - Name: DB_PORT_5432_TCP_ADDR
+                  Value: !Ref SharedAuroraPostgresqlEndpoint
+                - !Ref AWS::NoValue
+            - Fn::If:
+                - IsStaging
+                - Name: DB_PORT_5432_TCP_PORT
+                  Value: "3306" # TODO Make this a root stack parameter
+                - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -455,6 +470,16 @@ Resources:
               Value: !Ref AWS::Region
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
+            - Fn::If:
+                - IsStaging
+                - Name: DB_PORT_5432_TCP_ADDR
+                  Value: !Ref SharedAuroraPostgresqlEndpoint
+                - !Ref AWS::NoValue
+            - Fn::If:
+                - IsStaging
+                - Name: DB_PORT_5432_TCP_PORT
+                  Value: "3306" # TODO Make this a root stack parameter
+                - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
