--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -81,6 +81,7 @@ Parameters:
   SharedAuroraPostgresqlEndpoint: { Type: String }
 
 Conditions:
+  IsStaging: !Equals [!Ref EnvironmentType, Staging]
   IsProduction: !Equals [!Ref EnvironmentType, Production]
   HasRdsEndpoint: !Not [!Equals [!Ref SharedRdsPostgresqlEndpoint, ""]]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraPostgresqlEndpoint, ""]]
@@ -472,7 +473,7 @@ Resources:
 
   WebEcsService:
     Type: AWS::ECS::Service
-    Condition: HasRdsEndpoint
+    Condition: HasAuroraEndpoint
     DependsOn:
       - HttpListener
       - HttpsListener
@@ -525,8 +526,16 @@ Resources:
               Value: !Ref AWS::Region
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
-            - Name: DB_PORT_5432_TCP_ADDR
-              Value: !Ref SharedRdsPostgresqlEndpoint
+            - Fn::If:
+                - IsStaging
+                - Name: DB_PORT_5432_TCP_ADDR
+                  Value: !Ref SharedAuroraPostgresqlEndpoint
+                - !Ref AWS::NoValue
+            - Fn::If:
+                - IsStaging
+                - Name: DB_PORT_5432_TCP_PORT
+                  Value: "3306" # TODO Make this a root stack parameter
+                - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -556,7 +565,7 @@ Resources:
 
   WorkerEcsService:
     Type: AWS::ECS::Service
-    Condition: HasRdsEndpoint
+    Condition: HasAuroraEndpoint
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
@@ -602,8 +611,16 @@ Resources:
               Value: !Ref AWS::Region
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
-            - Name: DB_PORT_5432_TCP_ADDR
-              Value: !Ref SharedRdsPostgresqlEndpoint
+            - Fn::If:
+                - IsStaging
+                - Name: DB_PORT_5432_TCP_ADDR
+                  Value: !Ref SharedAuroraPostgresqlEndpoint
+                - !Ref AWS::NoValue
+            - Fn::If:
+                - IsStaging
+                - Name: DB_PORT_5432_TCP_PORT
+                  Value: "3306" # TODO Make this a root stack parameter
+                - !Ref AWS::NoValue
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
