Wire through in root stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -596,6 +596,8 @@ Resources:
         ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         HealthCheckPath: "/api/v1"
+        SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
+        SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
