Disable workers in new staging cluster

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -189,7 +189,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 2
+      DesiredCount: 0 # TODO
       EnableECSManagedTags: true
       LaunchType: EC2
       PropagateTags: TASK_DEFINITION
