--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -310,7 +310,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: !If [IsProduction, 6, 1]
+      DesiredCount: !If [IsProduction, 6, 0] # TODO
       EnableECSManagedTags: true
       LaunchType: EC2
       PropagateTags: TASK_DEFINITION
@@ -477,7 +477,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 1
+      DesiredCount: 0 # TODO
       EnableECSManagedTags: true
       LaunchType: EC2
       PropagateTags: TASK_DEFINITION
