--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -562,7 +562,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: !If [IsProduction, 1, 1]
+      DesiredCount: !If [IsProduction, 1, 0] # TODO
       EnableECSManagedTags: true
       LaunchType: EC2
       PropagateTags: TASK_DEFINITION
