--- a/stacks/apps/remix.yml
+++ b/stacks/apps/remix.yml
@@ -299,7 +299,7 @@ Resources:
     Properties:
       Description: !Sub Periodically loads ${EnvironmentType} Remix episodes
       ScheduleExpression: rate(1 hour)
-      State: ENABLED
+      State: !If [IsProduction, ENABLED, DISABLED] # TODO
       Targets:
         - Arn: !Ref EcsClusterArn
           EcsParameters:
