--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -452,6 +452,8 @@ Resources:
         DesiredWorkers: "0"
         ContainerPort: "3000"
         HealthCheckPath: "/api"
+        SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
+        SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
