--- a/stacks/resource-groups.yml
+++ b/stacks/resource-groups.yml
@@ -24,6 +24,21 @@ Resources:
               Values:
                 - !Ref RootStackName
         Type: TAG_FILTERS_1_0
+  StackEc2IntancesGroup:
+    Type: AWS::ResourceGroups::Group
+    Properties:
+      Description: >-
+        Inlcudes all EC2 instances that belong to the root stack
+      Name: !Sub ${RootStackName}-ec2-instances
+      ResourceQuery:
+        Query:
+          ResourceTypeFilters:
+            - AWS::EC2::Instance
+          TagFilters:
+            - Key: prx:cloudformation:root-stack-name
+              Values:
+                - !Ref RootStackName
+        Type: TAG_FILTERS_1_0
 
 Outputs:
   StackResourceGroupName:
