--- a/stacks/apps-400A.yml
+++ b/stacks/apps-400A.yml
@@ -1,7 +1,10 @@
 # stacks/provisioned.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: Provisioned apps # TODO
+Description: >-
+  This is a wrapper-stack for application-specific stacks. It creates stacks
+  that are roughly equivalent in terms of dependency priority and order amongst
+  all the app stacks being created.
 
 Parameters:
   TemplateUrlPrefix: { Type: String }
